28.11.2011:
        *Fixed: DSSI synth audio inputs. This means dssi vocoders, samplers etc. should work now. (Tim...)
        *Re-write: Fixed audio mixing, meter processing. Audio, and meters, for all mono <-> stereo route combinations work sensibly now.
        - (Re-)fixed valgrind 'invalid read size' in node.cpp, my very-old bad. Moved temp stack buffers to top. (Thnx to Flo)
        - Window titles of ladspa and dssi plugins now have track name prefix to help identify them.
28.11.2011:
        - MusE 2.0 release candidate 1 released (rj)
27.11.2011:
        - fixed invalid read problem in node.cpp: replaced the (ab-)use
          of a temporary stacked buffer (which was deleted too soon)
          by the use of a temporary heap buffer (new[])   (flo)
26.11.2011:
        - Added config properties for add-track menu, show all, show only visible and property for making visible what you add (rj)
        - Split behaviour and style configuration to two tabs (rj)
        - Adding invisible tracks no longer update track-info in arranger (rj)
        - clicking the background in tracklist and arranger no longer clear focus (rj)
        - moved configuration items for track visibility to global config (rj)
        - Added right click quit to channel strips (rj)
25.11.2011:
        - fixed segfault when closing and SndFileList had more than 1 entry (flo)
        - fixed some mismatched deletes (delete vs delete[]) (flo)
24.11.2011:
        - Fixed: xml song loading ignores very large text such as with Hexter-DSSI. Reported by jphaenlin. (Tim)
          Changed all local buffers to QByteArray (for unlimited size). Test OK loading/saving large songs + Hexter-DSSI.
        - Fixed "Invalid Read/Write"-bug with moving parts past the song's end or past the last track. (flo93)
          The problem was: when the song was automatically enlargened / a new track has automatically been