@@ -1,6 +1,7 @@
 28.11.2011:
         *Fixed: DSSI synth audio inputs. This means dssi vocoders, samplers etc. should work now. (Tim...)
         *Re-write: Fixed audio mixing, meter processing. Audio, and meters, for all mono <-> stereo route combinations work sensibly now.
+        - Do not apply the track pan or volume to extra synth channels above 2.
         - (Re-)fixed valgrind 'invalid read size' in node.cpp, my very-old bad. Moved temp stack buffers to top. (Thnx to Flo)
         - Window titles of ladspa and dssi plugins now have track name prefix to help identify them.
 28.11.2011:
